# smart-image-sorter

./: .gitignore  LICENSE  README.md  classifier.py  interface.ipynb  pyproject.toml  requirements.txt
utils/: file_manager.py  model.py
