[tool.poetry]
name = "zero-shot-image-classification"
version = "0.1.0"
description = ""
authors = ["Bellingcat"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
# torch = "^2.3.1"
requests = "^2.32.3"
ipython = "^8.26.0"
datasets = "^2.20.0"
pillow = "^10.4.0"
pandas = "^2.2.2"
tqdm = "^4.66.4"
transformers = "^4.42.4"
ipykernel = "^6.29.5"
ipywidgets = "^8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
