[tool.poetry]
name = "smart-image-sorter"
version = "0.1.0"
description = " User friendly zero-shot image classification using open-source models from HuggingFace's library"
authors = ["Bellingcat","Adriano Belisario"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
ipython = "^8.26.0"
datasets = "^2.20.0"
pillow = "^10.4.0"
pandas = "^2.2.2"
tqdm = "^4.66.4"
transformers = "^4.42.4"
ipykernel = "^6.29.5"
ipywidgets = "^8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
